Compiler/antlr/test_cases/semantic_errors/err3_type.tiger
main let
   var a : array[10] of int := 0;
in begin
    printf(a[0]);
end
